--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -1,18 +1,24 @@
-.border.rounded.border-emerald-500.p-4.m-2
-    .text-center.text-xl.text-emerald-900.mb-2.font-semibold
-        = link_to recipe.name, recipe
-    div
-        = recipe.category&.name
-        span.float-right
-            = recipe.author.full_name
-    div.mb-1
-        = svg("heart")
-        = recipe.reactions.size
+= turbo_frame_tag dom_id(recipe)
+    .border.rounded.border-emerald-500.p-4.m-2
+        .text-center.text-xl.text-emerald-900.mb-2.font-semibold
+            = link_to recipe.name, recipe, data: {turbo: false}
+        div
+            = recipe.category&.name
+            span.float-right
+                = recipe.author.full_name
+        .mb-1
+            - if recipe.liked_by?(Current.user)
+                = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
+                    = svg("heart-filled")
+                    = recipe.reactions.size
+            - else
+                = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
+                    = svg("heart")
+                    = recipe.reactions.size
 
-    hr
+        hr
 
-
-    div.flex.flex-wrap id="#{dom_id(recipe)}-labels"
-        - recipe.labels.each do |label|
-            = label_badge(label)
-  
+        .mt-2.flex.flex-wrap id="#{dom_id(recipe)}-labels"
+            - recipe.labels.each do |label|
+                = label_badge(label)
+    
