--- a/app/views/daily_plans/_day_recipe.html.slim
+++ b/app/views/daily_plans/_day_recipe.html.slim
@@ -1,4 +1,4 @@
-li.mb-1
+li.mb-1 data={ "sortable-update-url": daily_plan_recipe_sort_path(daily_plan_recipe_id: day_recipe.id) }
     .grid.grid-cols-4
         = simple_form_for day_recipe, method: :patch, :html=> {class: "inline grid grid-cols-3 col-span-3", data: { controller: "form" }} do |form|
             div.cursor-move
