Make recipes movable across days, with nice style

--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -1,16 +1,14 @@
-div.border.border-emerald-600.text-center id="#{dom_id(daily_plan)}-card"
-    div.text-xl
-        = link_to daily_plan_path(daily_plan) do 
+div.border.border-2.border-emerald-600.rounded-xl.shadow.text-center id="#{dom_id(daily_plan)}-card"
+    div.text-xl.mt-2
+        = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700" do 
             = "#{t("date.day_names")[daily_plan.date.wday]}"
         / = "#{daily_plan.date.strftime("%d.%m.%Y")}"
     
     div.overflow-hidden.mb-3 id="#{dom_id(daily_plan)}-recipes"
-        ul.space-y-2.last:mb-3
-            - daily_plan.recipes.each do |recipe|
-                - skew_class = "#{["-",nil].sample}skew-y-#{rand(1..2)}"
-                li.m-2.border.border-emerald-700.hover:bg-emerald-700.hover:text-white.p-2.rounded.shadow.transform.hover:scale-105.transition-transform.duration-200.ease-in-out class="#{skew_class}"
-                    = link_to recipe.name, recipe, class: "truncate"
-    
+        ul.space-y-2.first:mt-2.last:mb-3 data-controller="sortable" data-sortable-group-value="daily-plan-recipes" data-sortable-list-id="#{daily_plan.id}" data-sortable-dragging-classes="bg-emerald-700 text-white"
+            - daily_plan.daily_plan_recipes.each do |daily_recipe|
+                = render "day_recipe", daily_recipe: daily_recipe
+   
     - if daily_plan.tasks.any?
         hr
     
