--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -1,7 +1,7 @@
 = content_tag :title do
   = "upravit #{@event.name}"
 
-= turbo_frame_tag dom_id(@event) do
-  = render "form", event: @event
+/ = turbo_frame_tag dom_id(@event) do
+= render "form", event: @event
 
 = link_to "zpět", @event
