--- a/app/views/recipes/new.html.slim
+++ b/app/views/recipes/new.html.slim
@@ -1,8 +1,3 @@
-h1 New recipe
+= content_for :title, "přidat recept"
 
 == render "form", recipe: @recipe
-
-br
-
-div
-  = link_to "Back to recipes", recipes_path
