--- a/app/views/recipes/_form.html.slim
+++ b/app/views/recipes/_form.html.slim
@@ -1,6 +1,6 @@
 = default_form_for recipe do |form|
-  = form.input :name, col_span: 6, placeholder: ""
-  = form.input :portion_count, col_span: 3, placeholder: "", required: true
-  = form.association :category, col_span: 3, placeholder: ""
+  = form.input :name, col_span: :full
+  = form.input :portion_count, col_span: 6
+  = form.association :category, col_span: 6
   = form.buttons_section
     = form.submit
