Improve some more forms

--- a/app/views/recipe_ingredients/_recipe_ingredient.html.slim
+++ b/app/views/recipe_ingredients/_recipe_ingredient.html.slim
@@ -1,10 +1,7 @@
 li.mb-1
-    .grid.grid-cols-4
-        = simple_form_for recipe_ingredient, method: :patch, :html=> {class: "inline grid grid-cols-3 col-span-3", data: { controller: "form" }} do |form|
-            div = recipe_ingredient.ingredient.name
-            div.grid.grid-cols-2
-                = form.input :amount, label: false, :input_html => { data: { action: "change->form#submit" }, value: formatted_amount(recipe_ingredient.recipe_amount)}
-                div.mt-2.me-12 = formatted_unit(recipe_ingredient.recipe_amount, recipe_ingredient.ingredient.measurement)
-            div = form.input :comment, label: false, :input_html => { data: { action: "change->form#submit" } }
-        
-        div = action_button_to "smazat", recipe_ingredient, type: :dangerous, method: :delete, data: { turbo_confirm: "Opravdu smazat?" }
+    = default_form_for recipe_ingredient, method: :patch, html: { data: { controller: "form" }} do |form|
+        = form.input :name, label: false, disabled: true, col_span: 4
+        = form.input :amount, label: false, input_html: { data: { action: "change->form#submit" }}, col_span: 3
+        = form.input :comment, label: false, input_html: { data: { action: "change->form#submit" }}, col_span: 3
+        .col-span-2
+            = action_button_to "smazat", recipe_ingredient, type: :dangerous, formaction: recipe_ingredient_path(recipe_ingredient), formmethod: :delete, data: { turbo_confirm: "Opravdu smazat?" }
