--- a/app/views/ingredients/_form.html.slim
+++ b/app/views/ingredients/_form.html.slim
@@ -4,4 +4,4 @@
   = form.association :measurement, col_span: 6
   = form.association :category, col_span: 6
   = form.buttons_section
-    = form.submit "přidat surovinu"
+    = form.submit
