--- a/app/views/ingredients/edit.html.slim
+++ b/app/views/ingredients/edit.html.slim
@@ -1,10 +1,6 @@
-h1 Editing ingredient
+= content_for :title, "upravit surovinu"
 
 == render "form", ingredient: @ingredient
 
-br
-
 div
-  => link_to "Show this ingredient", @ingredient
-  '|
-  =< link_to "Back to ingredients", ingredients_path
+  =< link_to "zpět", ingredients_path
