Improve ingredient pages and forms

--- a/app/views/ingredients/edit.html.slim
+++ b/app/views/ingredients/edit.html.slim
@@ -3,4 +3,4 @@
 == render "form", ingredient: @ingredient
 
 div
-  =< link_to "zpět", ingredients_path
+  =< link_to "zpět", ingredient_path(@ingredient)
