--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,5 +1,5 @@
 = default_form_for event, html: { class: "grid grid-cols-12" } do |form|
-  = form.input :name, col_span: :full
+  = form.input :name, col_span: :full, autofocus: true
   = form.input :date_from, as: :date, col_span: 3
   = form.input :date_to, as: :date, col_span: 3
   = form.input :people_count, col_span: 3
