--- a/app/views/events/new.html.slim
+++ b/app/views/events/new.html.slim
@@ -1,8 +1,6 @@
-h1 New event
+= content_for :title, "přidat akci"
 
 == render "form", event: @event
 
-br
-
 div
-  = link_to "Back to events", events_path
+  = link_to "zpět", events_path
