--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag dom_id(recipe)
-    .border.rounded.border-emerald-500.p-4.m-2
+    .border.rounded.border-emerald-500.p-4.m-2.h-full
         .text-center.text-xl.text-emerald-900.mb-2.font-semibold
             = link_to recipe.name, recipe, data: {turbo: false}
         div
