Pass data attributes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,1 +1,9 @@
 /* Application styles */
+
+.highlight {
+  background-color: yellow;
+}
+.strong-highlight {
+  background-color: red;
+  font-weight: bold;
+}
