--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -33,4 +33,6 @@
     - @event.timetable.days.each do |day|
       = render("day_card", day: )
 
+
+= button_link_to "nákupní seznam", event_shopping_list_path(@event)
       
