--- a/app/views/recipes/_tasks_edit.html.slim
+++ b/app/views/recipes/_tasks_edit.html.slim
@@ -5,26 +5,21 @@ div
   .grid.grid-cols-5.font-bold
     .col-span-4
       .grid.grid-cols-3.gap-2
-        span = "název"
         span = "popis"
+        span = "název"
         span = "dní před vařením"
 
   - @recipe.tasks.each do |task|
-    .grid.grid-cols-5
-        = simple_form_for task, method: :patch, html: { class: "inline col-span-4", data: {controller: "form"} } do |form|
-            .grid.grid-cols-3.gap-2
-                = form.input :name, label: false, :input_html => { data: { action: "change->form#submit" } }
-                = form.input :description, label: false, :input_html => { data: { action: "change->form#submit" } }
-                = form.input :days_before_cooking, label: false, :input_html => { data: { action: "change->form#submit" } }
-        = action_button_to "smazat", recipe_task_path(recipe_id: @recipe.id, id: task.id), method: :delete, data: { turbo_confirm: "opravdu chceš smazat úkol?" }, type: :dangerous
+    div.h-24
+      = default_form_for task, url: recipe_task_path(recipe_id: @recipe.id, id: task.id), method: :patch, html: { class: "inline", data: {controller: "form"} } do |form|
+        = form.input :name, label: false, col_span: 3, :input_html => { data: { action: "change->form#submit" }}
+        = form.input :days_before_cooking, col_span: 3, label: false, :input_html => { data: { action: "change->form#submit" } }
+        = form.input :description, label: false, col_span: 3, :input_html => { data: { action: "change->form#submit" } }
+        = action_button_to "smazat", task, formaction: recipe_task_path(recipe_id: @recipe.id, id: task.id), formmethod: :delete, data: { turbo_confirm: "opravdu chceš smazat úkol?" }, type: :dangerous, class: "w-full"
 
-  = simple_form_for RecipeTask.new, html: {class: "inline"} do |form|
-    .grid.grid-cols-5.gap-2
-      .col-span-4
-        .grid.grid-cols-3.gap-2
-          = form.input :name, label: false
-          = form.input :description, label: false
-          = form.input :days_before_cooking, label: false
-          = form.input :recipe_id, as: :hidden, input_html: { value: @recipe.id }
-      div
-        = form.submit "přidat úkol", class: "#{Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]}"
+  = default_form_for RecipeTask.new, url: recipe_tasks_path(recipe_id: @recipe.id), html: {class: "inline"} do |form|
+    = form.input :name, col_span: 3
+    = form.input :days_before_cooking, col_span: 3
+    = form.input :description, col_span: 3
+    = form.input :recipe_id, as: :hidden, input_html: { value: @recipe.id }
+    = form.submit "přidat úkol", class: "#{Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]}"
