--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -9,10 +9,11 @@
   = button_link_to "upravit", edit_event_path(@event) if can? :update, @event
   = action_button_to "smazat", event_path(@event), method: :delete, data: { confirm: "Opravdu smazat?" }, type: :dangerous, disabled: !@event.destroyable? if can? :destroy, @event
 
-#details
-  div = "od #{formatted_date(@event.date_from)} do #{formatted_date(@event.date_to)}"
-  div = "#{@event.duration} dní"
-  div = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
+  #details
+    div = "od #{formatted_date(@event.date_from)} do #{formatted_date(@event.date_to)}"
+    div = "#{@event.duration} dní"
+    div
+      = link_to "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)", event_portion_types_path(@event) 
 
 #actions
   - if @event.archived?
